--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -14,7 +14,7 @@ mixin slider(pagination, buttons)
         +icon('search').__search-img
 
 mixin slide(href)
-  .swiper-slide
+  a(href=href).swiper-slide
     +e.slide&attributes(attributes)
       block
 
