--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -35,10 +35,10 @@ mixin banner()
         +slider(false, true)
           +slide('./assets/images/slide.jpg')
             img(rel="group" src='./assets/images/slide.jpg').slide-img
-          +slide('./assets/images/slide.jpg')
+          +slide('./assets/images/slide-two.jpg')
             img(rel="group" src='./assets/images/slide-two.jpg').slide-img
-          +slide('./assets/images/slide.jpg')
+          +slide('./assets/images/slide-three.jpg')
             img(rel="group" src='./assets/images/slide-three.jpg').slide-img
-          +slide('./assets/images/slide.jpg')
+          +slide('./assets/images/slide-one.jpg')
             img(rel="group" src='./assets/images/slide-one.jpg').slide-img
 
