--- a/app/blocks/breadcrumbs/breadcrumbs.scss
+++ b/app/blocks/breadcrumbs/breadcrumbs.scss
@@ -25,13 +25,14 @@ $breadpadding: 35px;
     .link {
       font-size: 14px;
       color: $color-basic;
+      
       span {
-
+        transition: border-bottom $ease-main, opacity $ease-main;
         border-bottom: 0px solid #fff;
       }
       &:hover {
         span {
-          border-bottom: 1px solid $color-basic;
+          border-bottom: 1px solid $line-bc;
         }
       }
     }
