--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -28,9 +28,9 @@ mixin banner()
               +icon('arrow3').__svg
               +e.__text Download as PDF
           
-
-        +e.__start Starting at Just
-        +e.__start-price £300 per month
+        +e.__down-block
+          +e.__start Starting at Just
+          +e.__start-price £300 per month
       +e.__right
         +slider(false, true)
           +slide('./assets/images/slide.jpg')
