--- a/app/components/content-left/content-left.pug
+++ b/app/components/content-left/content-left.pug
@@ -1,9 +1,9 @@
 mixin content-left()
-  +b.content-left&attributes(attributes)
-    +e.__title._top Description
+  +b.SECTION.content-left&attributes(attributes)
+    +e.H2.__title._top Description
     +e.__text One Neal Street offers a modern, self-contained office solution, which is located just off of Covent Garden's Long Acre. Unbranded and fully furnished, this renovated boutique office space is flooded with natural light. One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
-    +e.__title._location Location
-    +e.__title-bottom 8-10 New Fetter Ln, London EC4A 1AZ
+    +e.H2.__title._location Location
+    +e.H3.__title-bottom 8-10 New Fetter Ln, London EC4A 1AZ
     +map()#map
     +e.UL.__map-list
       +e.LI.__map-item
@@ -33,12 +33,12 @@ mixin content-left()
         +icon('plane').__metro._plane.__last
         +e.__map-text_min 44-80 min
         +icon('car').__metro._car
-    +e.__title Building rules
+    +e.H2.__title Building rules
     +e.__text._building  One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
     +text-list
-    +e.__title._Facilities Facilities
+    +e.H2.__title._Facilities Facilities
     +facil-list
-    +e.__title._offers Offers
+    +e.H2.__title._offers Offers
     +tabs
       +tab()(data-tab-target="tab1" class="tabs_yellow").active Hot Desk
       +tab()(data-tab-target="tab2" class="tabs_red") Dedicated desk
