--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -11,7 +11,7 @@ block content
     +content
     .slider-indexBox
       .container.container_slider
-        .slider-title You may also like spaces around 
+        h3.slider-title You may also like spaces around 
           span.slider-title_span Kensington 
         +slider-two(false, true)
           +slide-two
