--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -45,6 +45,7 @@ $color-bc-dark:#303333;
 $color-form-border:#c0c6cf;
 $color-border-light: #dbe1e3;
 $text-light:#a5b0bd;
+$line-bc:#c1c5c5;
 // ##########
 // Transitions
 // ##########
