--- a/app/blocks/accordion/accordion.scss
+++ b/app/blocks/accordion/accordion.scss
@@ -84,24 +84,29 @@
   }
 
   &__body {
-    padding: 0px 0px 10px 37px;
+    padding: 0px 0px 40px 37px;
     border-bottom: 1px solid $color-border;
     width: 100%;
     box-sizing: border-box;
     position: relative;
-    height: 70px;
+    max-height: 70px;
+    transition: max-height 0.3s ease-in;
     overflow: hidden;
     &::after {
       content: '';
       display: block;
       width: 100%;
       height: 40px;
+      transition: max-height 0.15s ease-out;
       background: rgba($color: $color-bg, $alpha: .8);
       position: absolute;
       bottom: 0;
       left: 0;
     }
-    #{$b}.is-active-body & { height: auto;}
+    #{$b}.is-active-body & {
+      max-height: 1000px;
+      transition: max-height 0.3s ease-in;
+    }
 
   }
 
@@ -116,3 +121,4 @@
     content: '-';
   }
 }
+
