--- a/app/blocks/tabs/tabs.scss
+++ b/app/blocks/tabs/tabs.scss
@@ -11,14 +11,14 @@
     justify-content: center;
     margin-top: $tab-gap;
     border: 1px solid $color-border-light;
-    transition: border-color $ease-main, opacity $ease-main;
+    // transition: border-color $ease-main, opacity $ease-main;
     padding: 21px 0px;
     cursor: pointer;
     font-size: 17px;
     font-weight: 700;
     letter-spacing: -0.34px;
     width: 25%;
-
+    transition: .3s;
     &.active {
       border-bottom: 2px solid;
     }
