--- a/app/blocks/accordion/accordion.scss
+++ b/app/blocks/accordion/accordion.scss
@@ -84,21 +84,21 @@
   }
 
   &__body {
-    padding: 0px 0px 40px 37px;
+    padding: 0px 0px 10px 37px;
     border-bottom: 1px solid $color-border;
     width: 100%;
     box-sizing: border-box;
     position: relative;
-    max-height: 70px;
+    max-height: 80px;
     transition: max-height 0.3s ease-in;
     overflow: hidden;
     &::after {
       content: '';
       display: block;
       width: 100%;
-      height: 40px;
+      height: 80px;
       transition: max-height 0.15s ease-out;
-      background: rgba($color: $color-bg, $alpha: .8);
+      background: linear-gradient(to bottom,rgba($color: $color-bg, $alpha: .3),rgba($color: $color-bg, $alpha: .8), rgba($color: $color-bg, $alpha: 1));
       position: absolute;
       bottom: 0;
       left: 0;
@@ -106,6 +106,10 @@
     #{$b}.is-active-body & {
       max-height: 1000px;
       transition: max-height 0.3s ease-in;
+      &::after {
+        content: '';
+        height: 10px;
+      }
     }
 
   }
