--- a/app/blocks/burger/burger.scss
+++ b/app/blocks/burger/burger.scss
@@ -6,26 +6,14 @@
   height: 32px;
   cursor: pointer;
   
-  &__line {
-    height: 4px;
-    background: $color-basic-dark;
-    transition: $ease-main;
-
-    &_top {
-      width: 100%;
-    }
-    &_center {
-      width: 50%;
-    }
-    &_bottom {
-      width: 70%;
-    }
-
+  svg {
+    transition: .3s;
+    fill: $color-basic;
   }
 
   &:hover {
-    .burger__line {
-      background: $color-basic;
+    svg {
+      fill: $color-basic-dark;
     }
   }
 
