--- a/app/blocks/scroll-form/scroll-form.scss
+++ b/app/blocks/scroll-form/scroll-form.scss
@@ -100,6 +100,7 @@
 
 .choices__inner {
   height: 80px !important;
+  padding: 3.5px 11px 3.75px 12px;
   &:hover {
     background: $color-bg !important;
     opacity: 1 !important;
