--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -98,8 +98,9 @@
       border-top: 1px solid $color-basic;
     }
   }
-
- 
+  .choices[data-type*=select-one]:after {
+      right: 0px !important;
+  }
   .choices__inner {
     height: auto !important;
     margin-right: 20px;
