--- a/app/components/info/info.scss
+++ b/app/components/info/info.scss
@@ -58,6 +58,11 @@
       padding-bottom: 5px !important;
       border-bottom: 1px solid $color-wite !important;
 
+      &::after {
+        content: '';
+        background-image: url('../images/arrow-wite.svg');
+      }
+
       &__inner {
         height: 20px !important;
         border:0 !important;
