--- a/app/pages/page1/page1.scss
+++ b/app/pages/page1/page1.scss
@@ -10,7 +10,10 @@
       margin-right: 54px !important;
       height: 17px !important;
       margin-bottom: 0 !important;
-  
+      &::after {
+        content: '';
+        right: 10px;
+      }
       &__inner {
         height: 17px !important;
         padding: 0 !important;
