--- a/app/blocks/facil-list/facil-list.scss
+++ b/app/blocks/facil-list/facil-list.scss
@@ -5,21 +5,23 @@
   margin-bottom: 61px;
 
   &__item {
-    width: 16%;
+    width: 18%;
     border: 1px solid $color-basic;
     margin-bottom: 13px;
-    padding:10px 22px;
+    padding: 15px 20px 11px 14px;
     display: flex;
     flex-direction: column;
   }
 
   &__title {
-    margin-bottom: 80px;
+    margin-bottom: 70px;
+    font-weight: 700;
+    font-size: 16px;
   }
 
   &__img {
     align-self: flex-end;
     height: 50px;
-    width: 40px;
+    width: 46px;
   }
 }
