--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -15,6 +15,8 @@
 
       .slider__heart {
         opacity: 1;
+        fill: #ffffff;
+        stroke: #ffffff;
       }
     }
   }
@@ -28,6 +30,7 @@
     width: 27px;
     height: 27px;
     fill: #ffffff;
+    stroke: #ffffff;
     transition: .3s;
   }
 
