--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -8,18 +8,20 @@ mixin header()
           lineargradient#SVGID_1_(gradientUnits='userSpaceOnUse', x1='161.1675', y1='130.628', x2='236.9237', y2='242.9412')
             stop(offset='0.25')
             stop(offset='1')
-          path.st0(d='M236.4,89.9V212L162,255.3v-33.4l61.8-36.2V96.2L137,146.9v151.8l124.4-72.3V75.5L236.4,89.9z M162,161.3\
+          path.up(d='M236.4,89.9V212L162,255.3v-33.4l61.8-36.2V96.2L137,146.9v151.8l124.4-72.3V75.5L236.4,89.9z M162,161.3\
           l36.8-21.7v31.7L162,193V161.3z')
+          style(type='text/css') .up{fill:#0caecc;stroke:#30e3c9;}
           lineargradient#SVGID_2_(gradientUnits='userSpaceOnUse', x1='93.8103', y1='119.2071', x2='30.6019', y2='254.758')
             stop(offset='0.25')
             stop(offset='1')
-          path.st1(d='M0,75.5v150.9l124.4,72.1V217v-9.4l-61.8-36.2v-31.7l61.8,36.2v-28.9L37.6,96.2v89.5l61.8,36.2v33.3L25,212\
+          path.center(d='M0,75.5v150.9l124.4,72.1V217v-9.4l-61.8-36.2v-31.7l61.8,36.2v-28.9L37.6,96.2v89.5l61.8,36.2v33.3L25,212\
           V89.9L0,75.5z')
+          style(type='text/css') .center{fill:#30e3c9;stroke:#0caecc;}
           lineargradient#SVGID_3_(gradientUnits='userSpaceOnUse', x1='128.0955', y1='9.191469e-02', x2='131.36', y2='93.5756')
             stop(offset='0.25')
             stop(offset='1')
-          polygon.st2(points='0,75.5 25,89.9 130.7,28.9 236.4,89.9 261.4,75.5 130.7,0 ')
-
+          polygon.top(points='0,75.5 25,89.9 130.7,28.9 236.4,89.9 261.4,75.5 130.7,0 ')
+            style(type='text/css') .top{fill:#0caecc;stroke:#30e3c9;}
         // ?xml version="1.0" encoding="utf-8"?
         // Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)
         svg#header-text(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewBox='0 0 552.4 102.5', style='enable-background:new 0 0 552.4 102.5;', xml:space='preserve')
