--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -2,6 +2,7 @@
   display: flex;
   z-index: 10;
   align-items: center;
+  transition: padding .4s;
   &__logo {
     margin-right: auto;
     display: flex;
