--- a/app/components/banner/banner.scss
+++ b/app/components/banner/banner.scss
@@ -45,6 +45,10 @@
     color: $color-wite;
     font-weight: 700;
     font-size: 17px;
+    transition: .3s;
+    &:hover {
+      opacity: .5;
+    }
   }
 
   &__sqad-list {
