--- a/app/components/banner/banner.scss
+++ b/app/components/banner/banner.scss
@@ -6,7 +6,7 @@
 
   &__left {
     width: 30%;
-    padding: 61px 32px 54px 68px;
+    padding: 60px 32px 54px 70px;
     background: $color-grey-dark;
     display: flex;
     flex-direction: column;
@@ -53,7 +53,7 @@
 
   &__sqad-list {
     display: flex;
-    margin-bottom: 30px;
+    margin-bottom: 28px;
   }
 
   &__sqad-item {
@@ -73,10 +73,11 @@
   }
 
   &__title {
-    font-size: 38px;
+    font-size: 40px;
     display: block;
     margin-bottom: auto;
-    line-height: 1.3;
+    letter-spacing: -.8px;
+    line-height: 1.2;
     &_info {
       font-size: 54px;
       line-height: 1.1;
@@ -125,7 +126,7 @@
 
   &__svg {
     height: 25px;
-    width: 25px;
+    width: 26px;
     fill: $color-wite;
   }
 }
