--- a/app/blocks/facil-list/facil-list.pug
+++ b/app/blocks/facil-list/facil-list.pug
@@ -1,26 +1,26 @@
 mixin facil-list()
   +b.UL.facil-list&attributes(attributes)
     +e.LI.__item
-      +e.__title Gym
+      +e.P.__title Gym
       +icon('gym').__img._gym
     +e.LI.__item
-      +e.__title Childcare
+      +e.P.__title Childcare
       +icon('childcare').__img
     +e.LI.__item
-      +e.__title Kitchen
+      +e.P.__title Kitchen
       +icon('kitchen').__img
     +e.LI.__item
-      +e.__title Tea/Coffee
+      +e.P.__title Tea/Coffee
       +icon('tea_coffe').__img
     +e.LI.__item
-      +e.__title Lockers
+      +e.P.__title Lockers
       +icon('lockers').__img
     +e.LI.__item
-      +e.__title Event Space
+      +e.P.__title Event Space
       +icon('event_space').__img
     +e.LI.__item
-      +e.__title Bike Storage
+      +e.P.__title Bike Storage
       +icon('bike_storage').__img
     +e.LI.__item
-      +e.__title Showers
+      +e.P.__title Showers
       +icon('showers').__img
