--- a/app/blocks/scroll-form/scroll-form.scss
+++ b/app/blocks/scroll-form/scroll-form.scss
@@ -1,7 +1,7 @@
 .scroll-form {
-  width: 290px;
+  width: 289px;
   display: block;
-  padding: 28px 39px;
+  padding: 30px 39px;
   background: $color-wite;
     &__title {
       font-weight: 700;
@@ -17,6 +17,7 @@
 
     .input-numberbox__button {
       width: 63px;
+      font-size: 30px;
     }
 
     .form-select {
