--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -22,15 +22,15 @@ mixin banner()
           +e.LI.__down-item
             +e.A(href="#").__link-item
               +icon('heart').__svg
-              +e.__text Add to Favorites
+              +e.P.__text Add to Favorites
           +e.LI.__down-item
             +e.A(href="#").__link-item
               +icon('arrow3').__svg
-              +e.__text Download as PDF
+              +e.P.__text Download as PDF
           
         +e.__down-block
-          +e.__start Starting at Just
-          +e.__start-price £300 per month
+          +e.P.__start Starting at Just
+          +e.P.__start-price £300 per month
       +e.__right
         +slider(false, true)
           +slide('./assets/images/slide.jpg')
