--- a/app/components/footer/footer.pug
+++ b/app/components/footer/footer.pug
@@ -67,4 +67,4 @@ mixin footer()
                         +icon('instagram').__social-svg
       +e.__down
         .container
-          +e.__text The Space Pool Service operates under the United Kingdom Urisdiction. This text have no any sense it’s just some sort of dummie to show the place where we can put an information usually writen with small letters.
+          +e.P.__text The Space Pool Service operates under the United Kingdom Urisdiction. This text have no any sense it’s just some sort of dummie to show the place where we can put an information usually writen with small letters.
