--- a/app/blocks/scroll-form/scroll-form.pug
+++ b/app/blocks/scroll-form/scroll-form.pug
@@ -1,13 +1,13 @@
 mixin scroll-form()
   +b.DIV.scroll-form&attributes(attributes)
-    +e.__title Reservation form
+    +e.H3.__title Reservation form
     +select.form-select
       option(value="<div class='option-top'> <span class='cube cube_yellow'></span>dedicated desk</div> <div class='option-down'> £300 per month </div>")
       option(value="<div class='option-top'> <span class='cube cube_red'></span>hot desk</div> <div class='option-down'> £300 per month </div>")
       option(value="<div class='option-top'> <span class='cube cube_red'></span>dedicated desk</div> <div class='option-down'> £300 per month </div>")
       option(value="<div class='option-top'> <span class='cube cube_blue'></span>office space</div> <div class='option-down'> £300 per month </div>")
-    +e.__text Including VAT and Service Fee
+    +e.P.__text Including VAT and Service Fee
     +input-number
     +button-gradient Request Reservation
     +button Arrange a Viewing
-    +e.__text-min  * Utility bills and other services are paid separately
+    +e.P.__text-min  * Utility bills and other services are paid separately
