--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -189,7 +189,7 @@
     background: $color-bg;
     height: 100%;
     &_next {
-      right: -11%;
+      right: -10%;
       &::before {
         border: 0 solid #000;
         border-top-width: 2px;
@@ -197,7 +197,7 @@
       }
     }
     &_prev {
-      left: -11%;
+      left: -10%;
       &::before {
         border: 0 solid #000;
         border-bottom-width: 2px;
@@ -214,5 +214,8 @@
   svg {
     fill: black;
     stroke: black;
+  }
+  .slider__button {
+    top: initial;
   }
 }
