--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -27,13 +27,13 @@
   }
 
   &_content {
-    width: 1080px;
+    width: 1085px;
     display: flex;
     align-items: flex-start;
   }
 
   &_slider {
-    width: 85%;
+    max-width: 85%;
   }
 
 }
