--- a/app/components/content-left/content-left.scss
+++ b/app/components/content-left/content-left.scss
@@ -51,23 +51,25 @@
 
   &__map-list {
     margin-top: 48px;
-    margin-bottom: 78px;
+    margin-bottom: 75px;
   }
 
   &__map-item {
     display: flex;
-    padding-bottom: 7px;
+    padding-bottom: 11px;
     border-bottom: 1px solid $color-basic-light;
-    margin-bottom: 15px;
+    margin-bottom: 11px;
   }
 
   &__map-text {
     margin-right: 10px;
     font-size: 18px;
     font-weight: 700;
+    letter-spacing: -.3px;
     &_min {
       font-weight: 400;
       letter-spacing: 0px;
+      margin-right: 2px;
     }
   }
 
