--- a/app/blocks/tabs/tabs.scss
+++ b/app/blocks/tabs/tabs.scss
@@ -27,33 +27,35 @@
     letter-spacing: -0.34px;
     width: 25%;
     transition: .3s;
+    border-bottom: 1px solid;
     &.active {
-      border-bottom: 2px solid;
+      border-bottom: 6px solid;
+      padding: 21px 0px 16px;
     }
   }
 
   &_yellow {
-    border-bottom: 1px solid $color-yellow;
+    border-bottom:1px solid $color-yellow;
     &.active {
-      border-bottom: 6px solid $color-yellow;
+      border-bottom:6px solid  $color-yellow;
     }
   }
   &_red {
-    border-bottom: 1px solid $color-red;
+    border-bottom:1px solid $color-red;
     &.active {
       border-bottom: 6px solid $color-red;
     }
   }
 
   &_blue {
-    border-bottom: 1px solid $color-blue;
+    border-bottom:1px solid $color-blue;
     &.active {
       border-bottom: 6px solid $color-blue;
     }
   }
 
   &_green {
-    border-bottom: 1px solid $color-green;
+    border-bottom:1px solid $color-green;
     &.active {
       border-bottom: 6px solid $color-green;
     }
