--- a/app/blocks/facil-list/facil-list.scss
+++ b/app/blocks/facil-list/facil-list.scss
@@ -2,21 +2,22 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-bottom: 67px;
+  margin-bottom: 62px;
 
   &__item {
     width: 18%;
     border: 1px solid $color-basic;
     margin-bottom: 13px;
-    padding: 15px 20px 11px 14px;
+    padding: 13px 17px 17px 16px;
     display: flex;
     flex-direction: column;
   }
 
   &__title {
-    margin-bottom: 70px;
+    margin-bottom: 67px;
     font-weight: 700;
     font-size: 18px;
+    letter-spacing: 0;
   }
 
   &__img {
