--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -56,3 +56,12 @@
 }
 
 .leaflet-container .leaflet-control-attribution { display: none; }
+
+.leaflet-shadow-pane {
+ display: none;
+}
+
+.leaflet-interactive {
+  width: 44px !important;
+  height: 50px !important;
+}
