--- a/app/components/content-left/content-left.pug
+++ b/app/components/content-left/content-left.pug
@@ -60,6 +60,19 @@ mixin content-left()
               +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
               +text-list._acardeon
 
+          +accordion
+            +accordion-header 
+              +accordion-button
+              +e.__hot-desc hot desc
+              +e.__price £185 per month
+              +icon('heart').__heart
+              +button Arrange a viewing
+              +button-gradient Request Reservation
+
+            +accordion-body
+              +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+              +text-list._acardeon
+
 
           +accordion.is-active-body
             +accordion-header 
