--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -4,7 +4,7 @@
   border-top: 1px solid $color-basic;
   padding: 70px 0 0 0;
 
-  &__logo {
+  .header__logo {
     margin-right: 66px;
     display: flex;
     align-items: center;
