--- a/app/blocks/accordion/accordion.scss
+++ b/app/blocks/accordion/accordion.scss
@@ -2,7 +2,10 @@
   $b: &;
   @include text;
   
-  .accordions & { margin-top: -1px; }
+  .accordions & { 
+    margin-top: -1px;
+    margin-bottom: 23px;
+  }
 
   &__header {
     height: 40px;
@@ -112,7 +115,9 @@
     }
 
   }
-
+  .text-list {
+    margin-bottom: 31px;
+  }
 }
 
 .accordions {
