--- a/app/blocks/breadcrumbs/breadcrumbs.scss
+++ b/app/blocks/breadcrumbs/breadcrumbs.scss
@@ -9,7 +9,8 @@ $breadpadding: 35px;
     position: relative;
 
     &:not(:last-child) {
-      padding-right: 22px;
+      padding-right: 24px;
+      letter-spacing: -.2px;
 
       &::after {
         content: '-';
@@ -20,6 +21,10 @@ $breadpadding: 35px;
         width: 5px;
         height: 5px;
       }
+    }
+    &:last-child {
+
+      letter-spacing: -.3px;
     }
 
     .link {
