fix button scroll form

--- a/app/blocks/scroll-form/scroll-form.scss
+++ b/app/blocks/scroll-form/scroll-form.scss
@@ -54,15 +54,17 @@
     .button { 
       display: flex;
       margin-bottom: 36px;
+      font-size: 18px;
+      letter-spacing: -.5px;
       &_gradient {
-        padding: 10px 0;
+        padding: 6px 0;
         margin-bottom: 22px;
       }
       span {
         width: 100%;
         display: flex;
         justify-content: center;
-        padding: 6px;
+        padding: 3px;
       }
     }
 
