--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -31,11 +31,10 @@ mixin slider-two(pagination, buttons)
     if pagination
       +e.dots
         +e.dot
-    if buttons
-      +e.button._prev
-        +icon('arrow2')
-      +e.button._next
-        +icon('arrow2')
+  .slider__button-two.slider__button-two_prev
+    +icon('arrow2')
+  .slider__button-two.slider__button-two_next
+    +icon('arrow2')
 
 
 mixin slider-three(pagination, buttons)
@@ -45,8 +44,7 @@ mixin slider-three(pagination, buttons)
     if pagination
       +e.dots
         +e.dot
-    if buttons
-      +e.button._prev
-        +icon('arrow2')
-      +e.button._next
-        +icon('arrow2')
+  .slider__button-two.slider__button-two_prev
+    +icon('arrow2')
+  .slider__button-two.slider__button-two_next
+    +icon('arrow2')
