--- a/app/blocks/scroll-form/scroll-form.scss
+++ b/app/blocks/scroll-form/scroll-form.scss
@@ -6,11 +6,11 @@
     &__title {
       font-weight: 700;
       font-size: 24px;
-      margin-bottom: 26px;
+      margin-bottom: 28px;
     }
 
     .input-numberbox {
-      margin-bottom: 20px;
+      margin-bottom: 21px;
       border: 1px solid $color-basic;
       height: 41px;
     }
@@ -47,13 +47,13 @@
         color: $text-light;
         text-align: center;
         font-size: 12px;
-        letter-spacing: -0.42px;
+        letter-spacing: -.3px;
       }
     }
 
     .button { 
       display: flex;
-      margin-bottom: 36px;
+      margin-bottom: 34px;
       font-size: 18px;
       letter-spacing: -.5px;
       &_gradient {
@@ -98,7 +98,7 @@
   }
 }
 .choices {
-  margin-bottom:  16px;
+  margin-bottom:  15px;
 }
 
 .choices__inner {
