slider text overflow

--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -10,6 +10,7 @@
     cursor: pointer;
     &:hover {
       .slider-title__slide {
+        
         color: $color-basic-dark;
       }
 
@@ -163,6 +164,7 @@
 }
 
 .slider-title__slide {
+  @include ellipsis(100%);
   text-align: left;
   font-size: 19px;
   font-weight: 700;
