--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -26,7 +26,7 @@ block content
               .cube.cube_yellow
               .cube.cube_red
               .cube.cube_blue
-            .slider-title__slide Blooming Founders (Former Blooms Lon...
+            .slider-title__slide Blooming Founders (Former Blooms Lon Former Blooms Lon )
             .slider-plach EC2A, London
           +slide-two
             img(src='./assets/images/sbth.jpg').slide-index
@@ -34,12 +34,12 @@ block content
               .cube.cube_yellow
               .cube.cube_red
               .cube.cube_blue
-            .slider-title__slide Blooming Founders (Former Blooms Lon...
+            .slider-title__slide Blooming Founders (Former Blooms Lon Former Blooms Lon ) Blooming Founders (Former Blooms Lon Former Blooms Lon )
             .slider-plach EC2A, London
           +slide-two
             img(src='./assets/images/sbf.jpg').slide-index
             .slider-cube
               .cube.cube_yellow
-            .slider-title__slide Blooming Founders (Former Blooms Lon...
+            .slider-title__slide Blooming Founders (Former Blooms Lon Blooming Founders (Former Blooms Lon Former Blooms Lon )
             .slider-plach EC2A, London
     +footer
