--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -3,6 +3,7 @@
 .slider {
   position: relative;
   height: 100%;
+  
   &__slide {
     height: 100%;
     text-align: center;
@@ -215,9 +216,11 @@
   }
 }
 
-.swiper-slide-next {
-  width: 47% !important;
-}
-.swiper-slide-active {
-  width: 27.5% !important;
+.js-slider_one {
+  .swiper-slide-next {
+    width: 47% !important;
+  }
+  .swiper-slide-active {
+    width: 27.5% !important;
+  }
 }
