--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -32,7 +32,7 @@ mixin banner()
           +e.P.__start Starting at Just
           +e.P.__start-price £300 per month
       +e.__right
-        +slider(false, true)
+        +slider(false, true)._one
           +slide('./assets/images/slide.jpg')
             img(rel="group" src='./assets/images/slide.jpg').slide-img
           +slide('./assets/images/slide-two.jpg')
