page1 fix start

--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -143,6 +143,17 @@
     font-weight: 700;
     color: $color-basic-dark;
     text-align: left;
+    margin-top: 8px;
+  }
+  &-cube__text {
+    font-size: 16px;
+    font-weight: 700;
+    color: $color-basic-dark;
+    text-align: left;
+    margin-top: 13px;
+  }
+  &-cube__text + .slider-title__slide {
+    margin: 14px 0 10px;
   }
   &-text {
     color: $color-basic-light;
@@ -169,7 +180,7 @@
   text-align: left;
   font-size: 19px;
   font-weight: 700;
-  margin: 12px 0;
+  margin: 12px 0 8px;
   transition: .3s;
   color: $color-basic;
 }
@@ -177,7 +188,7 @@
 .slider-plach {
   text-align: left;
   font-size: 15px;
-  letter-spacing: -0.32px;
+  letter-spacing: 0;
   color: $color-basic-light;
   font-weight: 400;
   transition: .3s;
