--- a/app/components/info/info.scss
+++ b/app/components/info/info.scss
@@ -3,7 +3,7 @@
   background: url('../images/top.jpg') center center no-repeat;
   background-size: cover;
   color: $color-wite;
-  padding: 7.5% 9% 2% 8.5%;
+  padding: 7.8% 9% 2% 8.5%;
   margin: 0;
 
   &__content {
@@ -15,7 +15,7 @@
   }
   &__content-right {
     width: 58%;
-    padding-top: 13px;
+    padding-top: 10px;
   }
 
   &__links {
@@ -112,11 +112,22 @@
 }
 
 .info-two {
-  margin-top: 100px;
+  padding: 110px 1px 34px 136px;
+  margin-top: 85px;
   background: url('../images/bottom.jpg') center center no-repeat;
   .button {
-    width: 200px;
+    width: 210px;
     margin-top: 40px;
-    margin-bottom: 70px;
+    margin-bottom: 37px;
+    padding: 9px 0;
+  }
+  .info__content-left {
+    width: 100%;
+  }
+  .info__title {
+    font-size: 56px;
+    line-height: 1;
+    width: 80%;
+    letter-spacing: -1px;
   }
 }
