--- a/app/pages/page1/page1.pug
+++ b/app/pages/page1/page1.pug
@@ -67,7 +67,7 @@ block content
       +map()#map
 
     .container.container_slider
-      .content-left__title.content-left__title_page Meeting Rooms
+      .content-left__title.content-left__title_page-down Meeting Rooms
       +slider-three(false, true)
         +slide-two
           img(src='./assets/images/sbo.jpg').slide-index
@@ -93,7 +93,7 @@ block content
     +info-two
 
     .container.container_slider
-      .content-left__title.content-left__title_page New Places
+      +e.H3.__title New Places
       +slider-two(false, true)
         +slide-two
           img(src='./assets/images/sbo.jpg').slide-index
@@ -129,7 +129,7 @@ block content
 
     .container.container_slider
       +e.__title
-      .content-left__title.content-left__title_page Articles
+      .content-left__title.content-left__title_page-down Articles
 
       +slider-three(false, true)
         +slide-two
