--- a/app/pages/page1/page1.scss
+++ b/app/pages/page1/page1.scss
@@ -7,7 +7,7 @@
   .info,
   .title-map {
     .choices {
-      margin-right: 54px !important;
+      margin-right: 48px !important;
       height: 17px !important;
       margin-bottom: 0 !important;
       &::after {
@@ -50,9 +50,10 @@
       }
 
       &__inner {
-        padding-right: 20px !important;
+        padding-right: 23px !important;
         font-weight: 700;
         height: 22px!important;
+        letter-spacing: -.3px;
         .choices__item {
           font-size: 20px !important;
           padding:0 5px !important;
@@ -72,12 +73,17 @@
   .footer {
     margin-top: 100px;
   }
+  &__title {
+    font-size: 24px;
+    margin: 92px 0 60px 0;
+
+  }
 }
 
 .title-map {
   display: flex;
   align-items: center;
-  margin-top: 110px;
+  margin-top: 132px;
 
   &__title {
     margin-right: 50px;
