--- a/app/components/content-left/content-left.scss
+++ b/app/components/content-left/content-left.scss
@@ -27,10 +27,13 @@
     }
 
     &_page {
-      margin-bottom: 60px;
+      margin-bottom: 60px !important;
       margin-top: 100px;
     }
-  }
+    &_page-down {
+      margin-bottom: 60px !important;
+      margin-top: 114px;
+    }  }
 
   &__text {
     margin-bottom: 67px;
