--- a/app/components/info/info.pug
+++ b/app/components/info/info.pug
@@ -6,11 +6,11 @@ mixin info()
           +e.H1.__title.banner__title._info The place where you can find your dream workspace.
         +e.__content-right
           +e.__links
-            +e.__links-text What are you searching for?
-            .link-top Hot Desk
-            .link-top.link-top_red Dedicated Desk
-            .link-top.link-top_blue Meeting Room
-            .link-top.link-top_green Office Space
+            +e.P.__links-text What are you searching for?
+            a(href="#").link-top Hot Desk
+            a(href="#").link-top.link-top_red Dedicated Desk
+            a(href="#").link-top.link-top_blue Meeting Room
+            a(href="#").link-top.link-top_green Office Space
           +e.__selects
             +select.footer-select
               option(value="London")
@@ -23,14 +23,14 @@ mixin info()
               option(value="Select area")
               option(value="Select area")
             +button-gradient Find
-      +e.__bottom Between 2 960 offices, 380 conversation rooms and over 15 000 free co-working desks
+      +e.P.__bottom Between 2 960 offices, 380 conversation rooms and over 15 000 free co-working desks
 
 mixin info-two()
   .container
     +b.info.info-two&attributes(attributes)
       +e.__content
         +e.__content-left
-          +e.H1.__title.banner__title Thousands of professionals prefer to search for perfect workplace on Space Pool
+          +e.H2.__title.banner__title Thousands of professionals prefer to search for perfect workplace on Space Pool
           +button-gradient Find out why
         +e.__content-right
-      +e.__bottom Between 2 960 offices, 380 conversation rooms and over 15 000 free co-working desks
+      +e.P.__bottom Between 2 960 offices, 380 conversation rooms and over 15 000 free co-working desks
