--- a/app/components/info/info.scss
+++ b/app/components/info/info.scss
@@ -113,7 +113,7 @@
 
 .info-two {
   padding: 110px 1px 34px 136px;
-  margin-top: 85px;
+  margin: 84px 0 90px;
   background: url('../images/bottom.jpg') center center no-repeat;
   .button {
     width: 210px;
