--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -35,6 +35,7 @@
 .link-top {
   padding: 0;
   cursor: pointer;
+  color: $color-wite;
   border-bottom: 2px solid $color-yellow;
   border-top: 2px solid rgba(0, 0, 0, 0);
   border-left: 2px solid rgba(0, 0, 0, 0);
