--- a/app/pages/page1/page1.scss
+++ b/app/pages/page1/page1.scss
@@ -1,7 +1,38 @@
-.page1 {
+.page {
   display: block;
+
+  .section {
+    margin-bottom: 100px;
+    &_slider {
+      margin-bottom: 130px;
+    }
+    &_map {
+      margin-bottom: 120px;
+    }
+    &_slider-two {
+      margin-bottom: 0;
+    }
+    &_down {
+      margin-bottom: 90px;
+      .slider-text {
+        line-height: 1.7;
+      }
+      .slider-cube__text {
+        margin-top: 8px;
+      }
+      .slider-title__slide {
+        font-size: 26px;
+        letter-spacing: -.9px;
+        line-height: 1.3;
+        white-space: initial;
+        overflow: initial;
+        text-overflow: initial;
+        margin: 12px 0 10px;
+      }
+    }
+  }
+
   #map {
-    margin: 65px 0;
     height: 470px;
   }
   .info,
@@ -70,21 +101,18 @@
     }
   }
   
-  .footer {
-    margin-top: 100px;
-  }
+
   &__title {
     font-size: 24px;
-    margin: 92px 0 60px 0;
-
+    margin-bottom:60px;
+    font-weight: 700;
   }
 }
 
 .title-map {
   display: flex;
   align-items: center;
-  margin-top: 132px;
-
+  margin-bottom: 60px;
   &__title {
     margin-right: 50px;
     font-size: 25px;
