page1 social list

--- a/app/pages/page1/page1.pug
+++ b/app/pages/page1/page1.pug
@@ -136,7 +136,21 @@ block content
     section.section.section_down
       .container.container_slider
         +e.__title
-        h3.page__title Articles
+          h3 Articles
+          p.social-text Subscribe to our Social Media channels:
+          ul.social-list
+            li.social-item
+              a(href="#").social-link
+                +icon('facebook').social-svg
+            li.social-item
+              a(href="#").social-link
+                +icon('linkedin').social-svg
+            li.social-item
+              a(href="#").social-link
+                +icon('twitter').social-svg
+            li.social-item
+              a(href="#").social-link
+                +icon('instagram').social-svg
 
         +slider-three(false, true)
           +slide-two
