--- a/app/pages/page1/page1.scss
+++ b/app/pages/page1/page1.scss
@@ -103,9 +103,41 @@
   
 
   &__title {
-    font-size: 24px;
+    h3 {
+      font-size: 24px;
+      font-weight: 700;
+      margin-right: auto;
+    }
     margin-bottom:60px;
-    font-weight: 700;
+    display: flex;
+    align-items: center;
+    p {
+      margin-right: 37px;
+      font-size: 16px;
+      font-weight: 700;
+      letter-spacing: -.3px;
+    }
+
+  }
+  .social-list {
+    display: flex;
+
+    .social-item {
+      margin-right: 22px;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+
+    .page__social-svg {
+      height: 37px;
+      width: 32px;
+      fill: $color-basic;
+      transition: .3s;
+      &:hover {
+        fill: $color-basic-dark;
+      }
+    }
   }
 }
 
