--- a/app/components/content-left/content-left.pug
+++ b/app/components/content-left/content-left.pug
@@ -1,126 +1,131 @@
 mixin content-left()
-  +b.SECTION.content-left&attributes(attributes)
-    +e.H2.__title._top Description
-    +e.P.__text One Neal Street offers a modern, self-contained office solution, which is located just off of Covent Garden's Long Acre. Unbranded and fully furnished, this renovated boutique office space is flooded with natural light. One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
-    +e.H2.__title._location Location
-    +e.H3.__title-bottom 8-10 New Fetter Ln, London EC4A 1AZ
-    +map()#map
-    +e.UL.__map-list
-      +e.LI.__map-item
-        +e.P.__map-text Chancery Lane
-        +icon('metro').__metro._red.__last
-        +e.__map-text._min 5 min
-        +icon('man').__metro._car
-      +e.LI.__map-item
-        +e.P.__map-text Great Portland Street
-        +icon('metro').__metro._purpure
-        +icon('metro').__metro._yellow.__mr
-        +icon('metro').__metro._pink.__last
-        +e.__map-text._min 25 min
-        +icon('man').__metro._car
-      +e.LI.__map-item
-        +e.P.__map-text Haymarket / Jermyn Street
-        +icon('bus').__metro._bus
-        +e.SPAN.__map-nomer 6
-        +e.SPAN.__map-nomer 20
-        +e.SPAN.__map-nomer N53
-        +e.SPAN.__map-nomer N15
-        +e.SPAN.__map-nomer.__last N113
-        +e.SPAN.__map-text_min 25 min
-        +icon('man').__metro._car
-      +e.LI.__map-item
-        +e.P.__map-text Heathrow airport
-        +icon('plane').__metro._plane.__last
-        +e.SPAN.__map-text_min 44-80 min
-        +icon('car').__metro._car
-    +e.H2.__title Building rules
-    +e.P.__text._building  One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
-    +text-list
-    +e.H2.__title._Facilities Facilities
-    +facil-list
-    +e.H2.__title._offers Offers
-    +tabs
-      +tab()(data-tab-target="tab1" class="tabs_yellow").active Hot Desk
-      +tab()(data-tab-target="tab2" class="tabs_red") Dedicated desk
-      +tab()(data-tab-target="tab3" class="tabs_blue") Meeting room
-      +tab()(data-tab-target="tab3" class="tabs_green") Office space
-    +tabs-content
-      +tab-wrapper()(data-tab="tab1" data-tab-group="testtabs").active
-        +accordions
-          +accordion
-            +accordion-header 
-              +accordion-button
-              +e.__hot-desc hot desc
-              +e.__price £185 per month
-              +icon('heart').__heart
-              +button Arrange a viewing
-              +button-gradient Request Reservation
+  +b.content-left&attributes(attributes)
+    .section
+      +e.H2.__title._top Description
+      +e.P.__text One Neal Street offers a modern, self-contained office solution, which is located just off of Covent Garden's Long Acre. Unbranded and fully furnished, this renovated boutique office space is flooded with natural light. One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
+    .section
+      +e.H2.__title._location Location
+      +e.H3.__title-bottom 8-10 New Fetter Ln, London EC4A 1AZ
+      +map()#map
+      +e.UL.__map-list
+        +e.LI.__map-item
+          +e.P.__map-text Chancery Lane
+          +icon('metro').__metro._red.__last
+          +e.__map-text._min 5 min
+          +icon('man').__metro._car
+        +e.LI.__map-item
+          +e.P.__map-text Great Portland Street
+          +icon('metro').__metro._purpure
+          +icon('metro').__metro._yellow.__mr
+          +icon('metro').__metro._pink.__last
+          +e.__map-text._min 25 min
+          +icon('man').__metro._car
+        +e.LI.__map-item
+          +e.P.__map-text Haymarket / Jermyn Street
+          +icon('bus').__metro._bus
+          +e.SPAN.__map-nomer 6
+          +e.SPAN.__map-nomer 20
+          +e.SPAN.__map-nomer N53
+          +e.SPAN.__map-nomer N15
+          +e.SPAN.__map-nomer.__last N113
+          +e.SPAN.__map-text_min 25 min
+          +icon('man').__metro._car
+        +e.LI.__map-item
+          +e.P.__map-text Heathrow airport
+          +icon('plane').__metro._plane.__last
+          +e.SPAN.__map-text_min 44-80 min
+          +icon('car').__metro._car
+    .section  
+      +e.H2.__title Building rules
+      +e.P.__text._building  One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
+      +text-list
+      +e.H2.__title._Facilities Facilities
+    .section
+      +facil-list
+    .section
+      +e.H2.__title._offers Offers
+      +tabs
+        +tab()(data-tab-target="tab1" class="tabs_yellow").active Hot Desk
+        +tab()(data-tab-target="tab2" class="tabs_red") Dedicated desk
+        +tab()(data-tab-target="tab3" class="tabs_blue") Meeting room
+        +tab()(data-tab-target="tab3" class="tabs_green") Office space
+      +tabs-content
+        +tab-wrapper()(data-tab="tab1" data-tab-group="testtabs").active
+          +accordions
+            +accordion
+              +accordion-header 
+                +accordion-button
+                +e.__hot-desc hot desc
+                +e.__price £185 per month
+                +icon('heart').__heart
+                +button Arrange a viewing
+                +button-gradient Request Reservation
 
-            +accordion-body
-              +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
-              +text-list._acardeon
+              +accordion-body
+                +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+                +text-list._acardeon
 
-          +accordion
-            +accordion-header 
-              +accordion-button
-              +e.__hot-desc hot desc
-              +e.__price £185 per month
-              +icon('heart').__heart
-              +button Arrange a viewing
-              +button-gradient Request Reservation
+            +accordion
+              +accordion-header 
+                +accordion-button
+                +e.__hot-desc hot desc
+                +e.__price £185 per month
+                +icon('heart').__heart
+                +button Arrange a viewing
+                +button-gradient Request Reservation
 
-            +accordion-body
-              +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
-              +text-list._acardeon
-
-
-          +accordion.is-active-body
-            +accordion-header 
-              +accordion-button.is-active-button
-              +e.P.__hot-desc hot desc
-              +e.P.__price £185 per month
-              +e.P.__text-acr AVIALABLE NOW
-            +accordion-body
-              +e.P.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
-              +text-list._accardion
+              +accordion-body
+                +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+                +text-list._acardeon
 
 
-      +tab-wrapper()(data-tab="tab2" data-tab-group="testtabs")
-        +accordions
-          +accordion
-            +accordion-header 
-              +accordion-button
-              +e.P.__hot-desc hot desc
-              +e.P.__price £185 per month
-              +e.P.__text-acr AVIALABLE NOW
-            +accordion-body
-              +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
-          +accordion.is-active
-            +accordion-header 
-              +accordion-button.is-active-button
-              +e.P.__hot-desc hot desc
-              +e.P.__price £185 per month
-              +e.P.__text-acr AVIALABLE NOW
-            +accordion-body
-              +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
-      +tab-wrapper()(data-tab="tab3" data-tab-group="testtabs")
-        +accordions
-          +accordion.is-active
-            +accordion-header 
-              +accordion-button.is-active-button
-              +e.P.__hot-desc hot desc
-              +e.P.__price £185 per month
-              +e.P.__text-acr AVIALABLE NOW
-            +accordion-body
-              +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
-          +accordion
-            +accordion-header 
-              +accordion-button
-              +e.P.__hot-desc hot desc
-              +e.P.__price £185 per month
-              +e.P.__text-acr AVIALABLE NOW
-            +accordion-body
-              +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+            +accordion.is-active-body
+              +accordion-header 
+                +accordion-button.is-active-button
+                +e.P.__hot-desc hot desc
+                +e.P.__price £185 per month
+                +e.P.__text-acr AVIALABLE NOW
+              +accordion-body
+                +e.P.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+                +text-list._accardion
+
+
+        +tab-wrapper()(data-tab="tab2" data-tab-group="testtabs")
+          +accordions
+            +accordion
+              +accordion-header 
+                +accordion-button
+                +e.P.__hot-desc hot desc
+                +e.P.__price £185 per month
+                +e.P.__text-acr AVIALABLE NOW
+              +accordion-body
+                +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+            +accordion.is-active
+              +accordion-header 
+                +accordion-button.is-active-button
+                +e.P.__hot-desc hot desc
+                +e.P.__price £185 per month
+                +e.P.__text-acr AVIALABLE NOW
+              +accordion-body
+                +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+        +tab-wrapper()(data-tab="tab3" data-tab-group="testtabs")
+          +accordions
+            +accordion.is-active
+              +accordion-header 
+                +accordion-button.is-active-button
+                +e.P.__hot-desc hot desc
+                +e.P.__price £185 per month
+                +e.P.__text-acr AVIALABLE NOW
+              +accordion-body
+                +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+            +accordion
+              +accordion-header 
+                +accordion-button
+                +e.P.__hot-desc hot desc
+                +e.P.__price £185 per month
+                +e.P.__text-acr AVIALABLE NOW
+              +accordion-body
+                +e.P.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
 
 
 
