--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -6,6 +6,12 @@
   position: relative;
   z-index: 1;
 }
+.map-two {
+  display: block;
+  position: relative;
+  height: 270px;
+  z-index: 1;
+}
 
 .leaflet-control-layers-toggle {
   background-image: url('../images/map/layers.png');
