--- a/app/pages/page1/page1.scss
+++ b/app/pages/page1/page1.scss
@@ -12,6 +12,10 @@
     &_slider-two {
       margin-bottom: 0;
     }
+    &_place {
+      margin-bottom: 115px;
+    }
+
     &_down {
       margin-bottom: 90px;
       .slider-text {
@@ -103,9 +107,10 @@
   
 
   &__title {
+    font-size: 25px;
+    font-weight: 700;
     h3 {
-      font-size: 24px;
-      font-weight: 700;
+      font-size: 25px;
       margin-right: auto;
     }
     margin-bottom:60px;
