--- a/app/pages/page1/page1.pug
+++ b/app/pages/page1/page1.pug
@@ -89,7 +89,7 @@ block content
             p.slider-cube__text 18 seats
             p.slider-title__slide Blooming Founders (Former Blooms Lon...
             p.slider-plach EC2A, London
-          +slide-two 18 seats
+          +slide-two
             img(src='./assets/images/sbf.jpg').slide-index
             p.slider-cube__text 18 seats
             p.slider-title__slide Blooming Founders (Former Blooms Lon...
@@ -98,7 +98,7 @@ block content
     section.section.section_slider-two
       +info-two
 
-    section.section.section_map
+    section.section.section_place
       .container.container_slider
         h3.page__title  New Places
         +slider-two(false, true)
