--- a/app/pages/page1/page1.scss
+++ b/app/pages/page1/page1.scss
@@ -109,6 +109,7 @@
   &__title {
     font-size: 25px;
     font-weight: 700;
+    letter-spacing: -.3px;
     h3 {
       font-size: 25px;
       margin-right: auto;
