--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -138,6 +138,11 @@ block content
           +col(3)
             +scroll-form
             
+    +ui-section
+    +ui-section-content()
+        +grid
+          +col(12)
+            +info
 
     //- Кнопки
     +ui-section
