--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -58,8 +58,55 @@ mixin header()
 mixin header-login()
   +b.header&attributes(attributes)
     .container.container_flex
-      +e.A(href="/").__logo
-        +icon('logo').__logo-cube
-        +icon('logo2').__logo-text
+      +e.A(href="./").__logo
+        // ?xml version="1.0" encoding="utf-8"?
+        // Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)
+        svg#header-cube(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewBox='0 0 261.4 298.7', style='enable-background:new 0 0 261.4 298.7;', xml:space='preserve')
+          lineargradient#SVGID_1_(gradientUnits='userSpaceOnUse', x1='161.1675', y1='130.628', x2='236.9237', y2='242.9412')
+            stop(offset='0.25')
+            stop(offset='1')
+          path.up(d='M236.4,89.9V212L162,255.3v-33.4l61.8-36.2V96.2L137,146.9v151.8l124.4-72.3V75.5L236.4,89.9z M162,161.3\
+          l36.8-21.7v31.7L162,193V161.3z')
+          style(type='text/css') .up{fill:#0caecc;stroke:#30e3c9;}
+          lineargradient#SVGID_2_(gradientUnits='userSpaceOnUse', x1='93.8103', y1='119.2071', x2='30.6019', y2='254.758')
+            stop(offset='0.25')
+            stop(offset='1')
+          path.center(d='M0,75.5v150.9l124.4,72.1V217v-9.4l-61.8-36.2v-31.7l61.8,36.2v-28.9L37.6,96.2v89.5l61.8,36.2v33.3L25,212\
+          V89.9L0,75.5z')
+          style(type='text/css') .center{fill:#30e3c9;stroke:#0caecc;}
+          lineargradient#SVGID_3_(gradientUnits='userSpaceOnUse', x1='128.0955', y1='9.191469e-02', x2='131.36', y2='93.5756')
+            stop(offset='0.25')
+            stop(offset='1')
+          polygon.top(points='0,75.5 25,89.9 130.7,28.9 236.4,89.9 261.4,75.5 130.7,0 ')
+            style(type='text/css') .top{fill:#0caecc;stroke:#30e3c9;}
+        // ?xml version="1.0" encoding="utf-8"?
+        // Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)
+        svg#header-text(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewBox='0 0 552.4 102.5', style='enable-background:new 0 0 552.4 102.5;', xml:space='preserve')
+          g
+            path(d='M0,69.4l9.2-12.9c5.6,5.8,14.3,10.7,25.2,10.7c9.3,0,13.8-4.3,13.8-8.8c0-14-45.7-4.4-45.7-34.3C2.5,10.9,13.9,0,32.6,0\
+            c12.6,0,23.1,3.8,30.9,11.1l-9.4,12.4c-6.4-6-15-8.7-23.1-8.7c-7.3,0-11.3,3.2-11.3,8c0,12.6,45.6,4.2,45.6,33.8\
+            C65.3,71,55,82,33.6,82C18.3,82,7.4,76.9,0,69.4z')
+            path(d='M88.5,73.2v29.3H73.4V23.1h15.1v7.3c4.4-5.6,10.7-8.7,17.7-8.7c14.8,0,25.5,10.9,25.5,30.1S121,82,106.3,82\
+            C99.5,82,93.2,79.1,88.5,73.2z M116,51.8c0-9.9-5.8-16.7-14.5-16.7c-4.9,0-10.5,2.9-13,6.5V62c2.5,3.6,8.1,6.5,13,6.5\
+            C110.2,68.5,116,61.8,116,51.8z')
+            path(d='M174.3,80.6v-6c-3.9,4.6-10.7,7.4-18.2,7.4c-9.2,0-20-6.2-20-19c0-13.4,10.8-18.6,20-18.6c7.6,0,14.4,2.5,18.2,7v-7.7\
+            c0-5.8-5-9.6-12.6-9.6c-6.2,0-11.9,2.3-16.8,6.8l-5.7-10.1c7-6.2,16.1-9,25.1-9c13.1,0,25.1,5.2,25.1,21.8v37.1H174.3z M174.3,66.8\
+            v-7.1c-2.5-3.3-7.3-5-12.1-5c-6,0-10.8,3.1-10.8,8.7c0,5.4,4.9,8.4,10.8,8.4C167.1,71.8,171.8,70.1,174.3,66.8z')
+            path(d='M197.8,51.8c0-17.6,12.7-30.1,30.5-30.1c11.8,0,18.9,5.1,22.7,10.4l-9.9,9.3c-2.7-4-6.9-6.2-12.1-6.2\
+            c-9.2,0-15.6,6.7-15.6,16.7s6.4,16.8,15.6,16.8c5.2,0,9.4-2.4,12.1-6.2l9.9,9.2C247.2,76.9,240,82,228.2,82\
+            C210.5,82,197.8,69.5,197.8,51.8z')
+            path(d='M254.2,51.8c0-16.7,12.3-30.1,29.8-30.1c17.1,0,28.8,12.9,28.8,31.7v3.3H270c1,7.3,6.8,13.3,16.5,13.3\
+            c4.9,0,11.7-2.1,15.4-5.7l6.7,9.8c-5.7,5.2-14.8,8-23.7,8C267.4,82,254.2,70.2,254.2,51.8z M283.9,33.7c-9.4,0-13.4,7-14.2,12.7\
+            h28.3C297.7,40.9,293.9,33.7,283.9,33.7z')
+            path(d='M355.3,73.2v29.3h-15.1V23.1h15.1v7.3c4.4-5.6,10.7-8.7,17.7-8.7c14.8,0,25.5,10.9,25.5,30.1S387.8,82,373,82\
+            C366.3,82,359.9,79.1,355.3,73.2z M382.8,51.8c0-9.9-5.8-16.7-14.5-16.7c-4.9,0-10.5,2.9-13,6.5V62c2.5,3.6,8.1,6.5,13,6.5\
+            C377,68.5,382.8,61.8,382.8,51.8z')
+            path(d='M402.9,51.8c0-16.3,11.4-30.1,30.3-30.1c19,0,30.5,13.8,30.5,30.1c0,16.4-11.4,30.2-30.5,30.2\
+            C414.3,82,402.9,68.2,402.9,51.8z M448,51.8c0-8.9-5.4-16.7-14.8-16.7s-14.6,7.7-14.6,16.7c0,9,5.2,16.8,14.6,16.8\
+            S448,60.8,448,51.8z')
+            path(d='M468.2,51.8c0-16.3,11.4-30.1,30.3-30.1c19,0,30.5,13.8,30.5,30.1c0,16.4-11.4,30.2-30.5,30.2\
+            C479.7,82,468.2,68.2,468.2,51.8z M513.3,51.8c0-8.9-5.4-16.7-14.8-16.7s-14.6,7.7-14.6,16.7c0,9,5.2,16.8,14.6,16.8\
+            S513.3,60.8,513.3,51.8z')
+            path(d='M537.2,80.6V1.2h15.1v79.4H537.2z')
       +header-user
       +burger
