--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -71,3 +71,11 @@
   width: 44px !important;
   height: 50px !important;
 }
+
+#mapTwo {
+  height: 470px;
+  .leaflet-default-icon-path {
+    background-image: url('../images/map/marker-two.png') !important;
+  }
+}
+    
