--- a/app/pages/page1/page1.pug
+++ b/app/pages/page1/page1.pug
@@ -68,7 +68,7 @@ block content
                   option(value="Workplace type")
                   option(value="Workplace type")
           .title-map__title.title-map__title_last &#169; Clear map settings
-        +map()#map
+        +map()#mapTwo
 
     section.section.section_slider-two
       .container.container_slider
