--- a/app/pages/page1/page1.pug
+++ b/app/pages/page1/page1.pug
@@ -101,7 +101,7 @@ block content
     section.section.section_place
       .container.container_slider
         h3.page__title  New Places
-        +slider-two(false, true)
+        +slider-five(false, true)
           +slide-two
             img(src='./assets/images/sbo.jpg').slide-index
             .slider-cube
@@ -152,7 +152,7 @@ block content
               a(href="#").social-link
                 +icon('instagram').social-svg
 
-        +slider-three(false, true)
+        +slider-for(false, true)
           +slide-two
             img(src='./assets/images/sbo.jpg').slide-index
             p.slider-cube__text September 9
